--- a/compose/goodreads/DOCKERFILE
+++ b/compose/goodreads/DOCKERFILE
@@ -4,10 +4,10 @@ WORKDIR /usr/src/app
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm install -g nodemon && npm install
 
 COPY . .
 
 EXPOSE 3000
 
-CMD ["node", "index.js"]
+CMD ["nodemon", "index.js"]
